# apex-notes

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  manualtest.md  package-lock.json  package.json  styleguide.md  supportmedia.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: release-checklist.md
notes/: apex.md  manifest.json
skills/apex-notes-writing/: SKILL.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: app.js  graphConfig.js  graphLargeMode.js  graphLayout.js  graphLayout.test.js  graphModel.js  graphModel.test.js  graphPositioning.js  graphPositioning.test.js  icons.js  index.html  labelVisibility.js  labelVisibility.test.js  nodeSizing.js  nodeSizing.test.js  noteRefs.js  recentProjects.js  recentProjects.test.js  searchIndex.js  styles.css
