[package]
name = "hierarchical_agent_managed_knowledge_graph"
version = "0.1.4"
description = "Local Markdown hierarchy graph editor"
authors = ["Boris de Wit"]
edition = "2021"

[lib]
name = "hierarchical_agent_managed_knowledge_graph_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-dialog = "2.7.1"
trash = "5"
